Update and fix for email temp of weekly summary email. need to fix the dynamic email for manager.

--- a/force-app/main/default/classes/OpportunityApprovalService.cls
+++ b/force-app/main/default/classes/OpportunityApprovalService.cls
@@ -1,16 +1,16 @@
-public with sharing class OpportunityApprovalService {
+global with sharing class OpportunityApprovalService {
     public static void submitForApproval(Opportunity opp) {
         Approval.ProcessSubmitRequest req = new Approval.ProcessSubmitRequest();
         req.setObjectId(opp.Id);
         req.setComments('Auto-submit by Approval Rule');
-        Approval.ProcessRequest res = Approval.process(req);
-        if (result.isSuccess()) {
+        Approval.ProcessResult res = Approval.process(req);
+        if (res.isSuccess()) {
             System.debug('Opportunity submitted for approval successfully.');
         } else {
-            System.debug('Submission failed: ' + result.getErrors());
+            System.debug('Submission failed: ' + res.getErrors());
         }
         if(!res.isSuccess()){
             throw new AuraHandledException('Approval Submission Failed: '+ res.getErrors()[0].getMessage());
         }
     }
-}
+}   
