--- a/force-app/main/default/classes/WeeklyOpportunitySummaryScheduler.cls
+++ b/force-app/main/default/classes/WeeklyOpportunitySummaryScheduler.cls
@@ -1,5 +1,6 @@
 public class WeeklyOpportunitySummaryScheduler implements Schedulable{
     public void execute(SchedulableContext sc) {
-        WeeklyOpportunitySummarySender.sendSummaryEmails();
+        Database.executeBatch(new WeeklyOpportunitySummarySender(), 9);
+       // WeeklyOpportunitySummarySender.sendSummaryEmails();
     }
 }
