Revert "Update Schedued to Batchable for weekly Opportunity Summary"
This reverts commit 6f90c93312c1877db15fbc2996c71e541de68f0a.

--- a/force-app/main/default/classes/WeeklyOpportunitySummaryScheduler.cls
+++ b/force-app/main/default/classes/WeeklyOpportunitySummaryScheduler.cls
@@ -1,6 +1,5 @@
 public class WeeklyOpportunitySummaryScheduler implements Schedulable{
     public void execute(SchedulableContext sc) {
-        Database.executeBatch(new WeeklyOpportunitySummarySender(), 9);
-       // WeeklyOpportunitySummarySender.sendSummaryEmails();
+        WeeklyOpportunitySummarySender.sendSummaryEmails();
     }
 }
